[package]
name = "monkey-printer"
description = "With an infinite nr of monkeys you could write Shakespeare"
license = "MIT"
version = "0.1.3"
repository = "https://github.com/adaptive-simon/monkey-printer"
edition = "2021"
[workspace]

[dependencies]
indicatif = "0.17"
tokio = { version = "1", features = ["full"] }
futures = "0.3"